--- a/project/index.html
+++ b/project/index.html
@@ -27,7 +27,7 @@
               </li>
         
               <li class="nav__item">
-                <a href="/services.html" class="nav__link ">Услуги</a>
+                <a href="./services.html" class="nav__link ">Услуги</a>
               </li>
               <li class="nav__item">
                 <a href="/" class="nav__link">Отзывы</a>
